fix: responsive layout bugs fixed

--- a/public/stylesheets/settings/config.css
+++ b/public/stylesheets/settings/config.css
@@ -14,4 +14,11 @@
   --font-sm: 0.85rem;
   --font-md: 1.2rem;
   --font-lg: 2rem;
+  --font-xlg: 2.5rem;
+  --gap-sm: 0.25rem;
+  --gap-md: 1.2rem;
+  --border-radius: 0.15rem;
+  --dvw-100: 100dvw;
+  --dvh-100: 100dvh;
+  --dvh-body: calc(var(--dvh-100) - 3rem); /* considering the margin-top/bottom of the body */
 }
