--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,26 +8,32 @@
 
 body {
   background-color: var(--dark);
+  row-gap: var(--gap-sm);
+  margin-top: 1.5rem;
   overflow-x: hidden;
 }
 
-header {
-  border-bottom-left-radius: 100px;
-  border-top-left-radius: 0.15rem;
-  border-top-right-radius: 0.15rem;
-  border-bottom-right-radius: 0.15rem;
-}
-
-.container {
-  background-color: var(--light);
+header.container {
+  background-color: transparent;
 }
 
 #logo {
+  position: relative;
+  height: 200px;
+  width: 170px;
+  left: -1rem;
+}
+
+#ranking_title {
   position: absolute;
-  height: 130px;
-  width: 115px;
-  top: -55px;
-  left: -20px;
+  width: 80%;
+  padding: 1rem;
+  right: 0;
+  bottom: 1rem;
+  border-radius: var(--border-radius);
+  background-color: var(--light);
+  text-align: right;
+  z-index: -1;
 }
 
 .card {
@@ -88,11 +94,9 @@ header {
   border-right: 1px solid var(--grey-500);
 }
 
-@media (min-width: 576px) {
+@media (min-width: 400px) {
   #logo {
     height: 230px;
     width: 200px;
-    top: -145px;
-    left: -40px;
   }
 }
